# graph-learn

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Makefile  README.md  README_cn.md  README_en.md  demo_dist.py  env.sh  meta_config  start_server.py  test_cpp_ut.sh  test_demo_script.py  test_python_ut.sh
dynamic-graph-service/benchmark/kafka/: CMakeLists.txt  driver.cc  driver.h  main.cc  options.cc  options.h
dynamic_graph_service/: CMakeLists.txt  package_third_party.sh
dynamic_graph_service/benchmark/sample_builder/: CMakeLists.txt  map_test.cc  sample_builder_test.cc
dynamic_graph_service/benchmark/stat_analysis/: .gitignore
dynamic_graph_service/conf/: coordinator.template.yml  dataloader.template.yml  install_query.dblp.json  query_plan.template.json  schema.dblp.json
dynamic_graph_service/conf/u2i/: coordinator.u2i.yml  install_query.u2i.json  schema.u2i.json
dynamic_graph_service/conf/ut/: coordinator.ut.yml  install_query.ut.json  query_plan.ut.json  sampling.ut.yml  schema.ut.json  serving.ut.yml
dynamic_graph_service/dataloader/: .gitignore  CMakeLists.txt  dataloader.md
dynamic_graph_service/dataloader/apps/: CMakeLists.txt
dynamic_graph_service/dataloader/cmake/: DataLoaderConfig.cmake.in  FindProtobuf.cmake  FindgRPC.cmake
dynamic_graph_service/dataloader/src/: batch_builder.cc  batch_producer.cc  dataloader.cc  group_producer.cc  options.cc  schema.cc  service.cc
dynamic_graph_service/fbs/: install_query_req.fbs  plan_node.fbs  query_plan.fbs  query_response.fbs  record.fbs  schema.fbs  stop_service.fbs  sync_meta.fbs  uninstall_query_req.fbs
dynamic_graph_service/gsl_client/: .gitignore  gen_fbs.sh  mock_server.py  pom.xml
dynamic_graph_service/proto/: coordinator.proto
dynamic_graph_service/python/: install_query.py
dynamic_graph_service/python/coordinator/: barrier.py  checkpoint.py  coordinator.py  grpc_service.py  http_service.py  manager.py  state_manager.py  test_client.py
dynamic_graph_service/python/data/: record_generator.py
dynamic_graph_service/src/common/: actor_wrapper.h  constants.h  host.cc  log.h  options.h  partition_router.h  partitioner.cc  partitioner.h  schema.cc  schema.h  slice.h  typedefs.h  utils.h
dynamic_graph_service/src/service/: actor_ref_builder.cc  actor_ref_builder.h  actor_system.cc  adaptive_rate_limiter.cc  adaptive_rate_limiter.h  data_update_actor.act.cc  data_update_actor.act.h  event_handler.cc  event_handler.h  sampling_actor.act.cc  sampling_actor.act.h  server.cc  server.h  service.cc  service.h  serving_actor.act.cc  serving_actor.act.h  serving_group.actg.h
graphlearn/: .gitignore  CMakeLists.txt  Makefile  __init__.py  env.sh  install_dependencies.sh  package_gl_actor_third_party.sh  package_third_party.sh  test_cpp_actor_ut.sh  test_cpp_ut.sh  test_python_ut.sh
graphlearn/common/base/: base64.cc  base64.h  closure.h  config.cc  errors.h  hash.cc  log.cc  log.h  macros.h  progress.h  time_stamp.cc
graphlearn/common/io/: path_util.cc  path_util.h  value.h
graphlearn/common/rpc/: notification.cc  notification.h
graphlearn/common/string/: numeric.h  string_tool.cc  string_tool.h
graphlearn/common/threading/: this_thread.h
graphlearn/contrib/knn/: Makefile  builder.cc  flat_index.cc  flat_index.h  gpu_ivfpq_index.cc  gpu_ivfpq_index.h  index_factory.cc  index_factory.h  index_manager.cc  ivfflat_index.cc  ivfflat_index.h  ivfpq_index.h  knn_op.h
graphlearn/core/: README.md
graphlearn/core/dag/: dag_edge.cc  tape.h
graphlearn/core/graph/: graph.h  graph_store.cc  graph_store.h  heter_dispatcher.h  local_graph.cc  local_noder.cc  noder.h  remote_graph.cc  remote_noder.cc  storage_creator.cc  storage_creator.h
graphlearn/core/io/: edge_loader.cc  edge_loader.h  element_value.cc  element_value.h  node_loader.cc  node_loader.h  parser.cc  parser.h  slice_reader.h
graphlearn/core/operator/: op_factory.cc  op_factory.h  op_registry.cc  operator.h  operator_factory.cc  operator_factory.h
graphlearn/core/partition/: base_partitioner.h  hash_partitioner.h  no_partitioner.h  partitioner.h  stitcher.h
graphlearn/core/runner/: dag_node_runner.cc  dag_node_runner.h  dag_scheduler.cc  dag_scheduler.h  distribute_runner.cc  distribute_runner.h  op_runner.cc
graphlearn/docs/: requirements.txt
graphlearn/docs/en/: install.md  operator.md  quick_start.md
graphlearn/docs/zh_CN/: conf.py  extend.md  operator.md  quick_start.md
graphlearn/examples/: .gitignore  __init__.py  requirements.txt
graphlearn/examples/basic/: run_dist_server_mode_fs_tracker.sh  run_dist_worker_mode_fs_tracker.sh  run_dist_worker_mode_rpc_tracker.sh  test_actor_local.py  test_dist_server_mode_fs_tracker.py  test_dist_worker_mode_fs_tracker.py  test_dist_worker_mode_rpc_tracker.py  test_local.py  test_local_temporal_loader.py  test_local_temporal_sampler.py  test_subgraph.py
graphlearn/examples/data/: cora.py  gen_temporal_data.py  jodie.py  ppi.py  utils.py
graphlearn/examples/eval/: README.md  blogcatelog_eval.py  test_rec.py
graphlearn/examples/tf/: ego_data.py  ego_data_loader.py  link_trainer.py  trainer.py
graphlearn/include/: aggregating_request.h  aggregation_request.h  client.h  config.h  constants.h  dag_dataset.h  data_source.h  graph_request.h  index_option.h  op_request.h  request.h  sampling_request.h  server.h  shardable.h  tensor.h  topology.h
graphlearn/platform/: env.cc  env.h  file_system.h  protobuf.h
graphlearn/platform/hadoop/: hadoop_file_system.cc
graphlearn/platform/local/: local_file_system.cc  local_file_system.h
graphlearn/proto/: dag.proto  request.proto  service.proto  tensor.proto
graphlearn/python/: .gitignore  client.py  cluster.py  config.py  decoder.py  errors.py  graph.py  graphscope.py  py_bind.h  py_client.cc  py_export.cc  py_wrapper.h  query.py  server.py  state.py  topology.py  utils.py  values.py
graphlearn/service/: call.h  client.cc  client_impl.h  constants.cc  executor.cc  executor.h  server.cc  server_impl.cc  server_impl.h  tensor.cc  tensor_impl.cc  tensor_impl.h  topology.cc
graphlearn/setup/: setup.py  version.py
(+1507 files in other folders)
